[package]
name = "bns-gateway"
description = "BNS Gateway"
version = "0.1.0"
edition = "2021"
license-file = "LICENSE"
keywords = ["banano", "ensdomains", "gateway", "ccip"]
homepage = "https://github.com/wrap-that-potassium/bns-gateway"
repository = "https://github.com/wrap-that-potassium/bns-gateway"

[dependencies]
ens-offchain-resolver-gateway = "0.1.4"
axum = { version = "0.6.18", features = ["tracing"] }
utoipa = { version = "3.3.0", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "3.1.3", features = ["axum"] }

ethers = "2.0.7"

blake2 = "0.10.6"
data-encoding = "2.4.0"
data-encoding-macro = "0.1.13"

tokio = { version = "1.28.2", features = ["full", "tracing"] }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
color-eyre = "0.6.2"
eyre = "0.6.8"

chrono = "0.4.26"
thiserror = "1.0.40"
async-trait = "0.1.68"
clap = { version = "4.3.3", features = ["color", "error-context", "help", "std", "suggestions", "usage", "cargo", "env"] }

[dev-dependencies]
ethers-ccip-read = "0.1.1"
